Add secret in properties and password as client att

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 # Application
 server.port=8080
+jwt.secret=usersecret
 
 #H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 #Datasource H2
-spring.datasource.url=jdbc:h2:file:~/workspace/estoque-facil/database/database.db
+spring.datasource.url=jdbc:h2:file:~/workspace/mercado-facil/database/database.db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class=org.h2.Driver
